--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>E-ZPark Smart Parking Map</title>
-  <!-- Mapbox GL JS -->
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <style>
@@ -26,66 +25,55 @@
 
   <script>
   (async function() {
-    const MAPBOX_TOKEN = 'pk.eyJ1IjoiZXotcGFyayIsImEiOiJjbWEyczBsZWcwamNvMm5va3Qwa2kyZTZ6In0.kP-KWRg12p0A6MsetfjibQ';
-    const COORD_CSV_URL  = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSEG7vxc13zZuw9_Wrp5tgTH9_tSwBMBEwiy4rZFSsi9vL9qs-9pNvYLOm4lx_1Lk9RC6HSuT_5VNE0/pub?single=true&output=csv';
-    const STATUS_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQ8gvbP_bQNl3zZNHG3L-5EvDszmpVZTQeUYL3NFPHVyKHAWjhEF1HdiTVHm-IvFQ0T1eXaOcLj/pub?single=true&output=csv';
-    const WEBHOOK_URL    = 'https://script.google.com/macros/s/AKfycbx1oiHErJFrSR2juag9WCfyB0EyWae5C3vMiBnlwY1yv8hY29J2YCvCPnlXORP-YWAk/exec';
-    const EDIT_PASSWORD  = 'Jcapable';
-    const REFRESH_INTERVAL_MS = 10000;
+    // Configuration
+    const MAPBOX_TOKEN  = 'pk.eyJ1IjoiZXotcGFyayIsImEiOiJjbWEyczBsZWcwamNvMm5va3Qwa2kyZTZ6In0.kP-KWRg12p0A6MsetfjibQ';
+    const COORD_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSEG7vxc13zZuw9_Wrp5tgTH9_tSwBMBEwiy4rZFSsi9vL9qs-9pNvYLOm4lx_1Lk9RC6HSuT_5VNE0/pub?output=csv';
+    const STATUS_CSV_URL= 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQ8gvbP_bQNl3zZNHG3L-5EvDszmpVZTQeUYL3NFPHVyKHAWjhEF1HdiTVHm-IvFQ0T1eXaOcLj/pub?output=csv';
+    const WEBHOOK_URL   = 'https://script.google.com/macros/s/AKfycbx1oiHErJFrSR2juag9WCfyB0EyWae5C3vMiBnlwY1yv8hY29J2YCvCPnlXORP-YWAk/exec';
+    const EDIT_PASSWORD = 'Jcapable';
+    const REFRESH_MS    = 10000;
 
     mapboxgl.accessToken = MAPBOX_TOKEN;
-    const map = new mapboxgl.Map({ container: 'map', style: 'mapbox://styles/mapbox/streets-v12', center: [-74.006, 40.7128], zoom: 16 });
+    const map = new mapboxgl.Map({ container:'map', style:'mapbox://styles/mapbox/streets-v12', center:[-74.006,40.7128], zoom:16 });
 
-    let userMarker = null;
-    let routeLayerId = 'route-layer';
-    let editorMode = false;
-    let lastClickLngLat = null;
+    let userMarker=null, lastClick=null, editorMode=false;
 
-    if (window.location.search.includes('setup=1')) {
-      const pw = prompt('Enter editor password:');
-      if (pw === EDIT_PASSWORD) { editorMode = true; alert('✅ Editor mode enabled. Click on the map to add new spots.'); }
-      else { alert('❌ Wrong password.'); }
+    // Editor mode
+    if(location.search.includes('setup=1')){
+      const pw=prompt('Enter editor password:');
+      if(pw===EDIT_PASSWORD){editorMode=true;alert('Editor mode enabled');}
+      else alert('Wrong password');
     }
 
-    const showLoading = s => document.getElementById('loading').style.display = s ? 'block' : 'none';
-    const parseCSV = t => t.trim().split(/\r?\n/).map(l => l.split(',').map(c => c.trim()));
+    const showLoading=show=>document.getElementById('loading').style.display=show?'block':'none';
+    const parseCSV=txt=>txt.trim().split(/\r?\n/).map(r=>r.split(',').map(c=>c.trim()));
 
-    async function fetchStatusMap() {
-      try {
-        const res = await fetch(STATUS_CSV_URL);
-        const rows = parseCSV(await res.text());
-        const h = rows[0]||[];
-        const v = rows[1]||[];
-        return h.reduce((m,k,i) => (m[k]=v[i]||'Unknown',m), {});
-      } catch { return {}; }
+    async function fetchStatus(){
+      try{const txt=await (await fetch(STATUS_CSV_URL)).text();
+        const [h,v]=parseCSV(txt);
+        return h.reduce((m,k,i)=>(m[k]=v[i]||'Unknown',m),{});
+      }catch{return{};}
     }
 
-    async function fetchCoords() {
-      try {
-        const rows = parseCSV(await (await fetch(COORD_CSV_URL)).text()).slice(1);
-        return rows.reduce((arr, r) => {
-          const [name, latS, lngS] = r;
-          const lat = parseFloat(latS), lng = parseFloat(lngS);
-          if (name && !isNaN(lat) && !isNaN(lng)) arr.push({ name, lat, lng });
-          return arr;
-        }, []);
-      } catch { return []; }
+    async function fetchCoords(){
+      try{const rows=parseCSV(await (await fetch(COORD_CSV_URL)).text()).slice(1);
+        return rows.map(r=>({name:r[0],lat:parseFloat(r[1]),lng:parseFloat(r[2])}))
+          .filter(o=>o.name && !isNaN(o.lat) && !isNaN(o.lng));
+      }catch{return[];}
     }
 
-    async function loadMapData() {
+    async function load(){
       showLoading(true);
-      const [statusMap, coords] = await Promise.all([fetchStatusMap(), fetchCoords()]);
-      document.querySelectorAll('.marker').forEach(el => el.remove());
-      if (map.getLayer(routeLayerId)) { map.removeLayer(routeLayerId); map.removeSource(routeLayerId); }
-      coords.forEach(({ name, lat, lng }) => {
-        const status = statusMap[name]||'Unknown';
-        const color = status.toLowerCase()==='free'? 'green' : status.toLowerCase()==='occupied'? 'red' : 'gray';
-        const el = document.createElement('div');
-        Object.assign(el.style, { background:color, width:'16px', height:'16px', borderRadius:'50%' });
+      const [statusMap,coords]=await Promise.all([fetchStatus(),fetchCoords()]);
+      document.querySelectorAll('.marker').forEach(el=>el.remove());
+      coords.forEach(({name,lat,lng})=>{
+        const st=statusMap[name]||'Unknown';
+        const color=st.toLowerCase()==='free'?'green':st.toLowerCase()==='occupied'?'red':'gray';
+        const el=document.createElement('div');Object.assign(el.style,{background:color,width:'16px',height:'16px',borderRadius:'50%'});
         new mapboxgl.Marker(el).setLngLat([lng,lat]).setPopup(
           new mapboxgl.Popup({offset:25}).setHTML(
-            `<strong>${name}</strong><br>Status: ${status}<br>`+
-            `<button onclick="routeTo(${lat},${lng})">Route</button> `+
+            `<b>${name}</b><br>Status: ${st}<br>`+
+            `<button onclick="route(${lat},${lng})">Route</button> `+
             `<a href=\"https://www.google.com/maps/dir/?api=1&destination=${lat},${lng}\" target=\"_blank\">Google Maps</a>`
           )
         ).addTo(map);
@@ -93,51 +81,37 @@
       showLoading(false);
     }
 
-    window.routeTo = async (lat, lng) => {
-      if (!userMarker) return alert('Waiting for location...');
-      const [uLng,uLat] = userMarker.getLngLat().toArray();
-      try {
-        const res = await fetch(
-          `https://api.mapbox.com/directions/v5/mapbox/driving/${uLng},${uLat};${lng},${lat}`+
-          `?geometries=geojson&access_token=${MAPBOX_TOKEN}`
-        );
-        const route = (await res.json()).routes[0].geometry;
-        if (map.getLayer(routeLayerId)) { map.removeLayer(routeLayerId); map.removeSource(routeLayerId); }
-        map.addSource(routeLayerId,{type:'geojson',data:route});
-        map.addLayer({id:routeLayerId,type:'line',source:routeLayerId,paint:{'line-color':'#0074D9','line-width':4}});
-      } catch(e) { console.error('Routing error:',e); }
+    window.route=async(lat,lng)=>{
+      if(!userMarker)return alert('Waiting on location');
+      const [uLng,uLat]=userMarker.getLngLat().toArray();
+      try{const res=await fetch(
+          `https://api.mapbox.com/directions/v5/mapbox/driving/${uLng},${uLat};${lng},${lat}?geometries=geojson&access_token=${MAPBOX_TOKEN}`
+        );const geom=(await res.json()).routes[0].geometry;
+        if(map.getLayer('route')){map.removeLayer('route');map.removeSource('route');}
+        map.addSource('route',{type:'geojson',data:geom});map.addLayer({id:'route',type:'line',source:'route',paint:{'line-color':'#0074D9','line-width':4}});
+      }catch(e){console.error(e);}
     };
 
-    navigator.geolocation.watchPosition(pos => {
-      const {longitude:lng,latitude:lat} = pos.coords;
-      if (!userMarker) { userMarker=new mapboxgl.Marker({color:'blue'}).setLngLat([lng,lat]).addTo(map); map.setCenter([lng,lat]); }
-      else { userMarker.setLngLat([lng,lat]); }
+    navigator.geolocation.watchPosition(pos=>{
+      const {longitude:lng,latitude:lat}=pos.coords;
+      if(!userMarker){userMarker=new mapboxgl.Marker({color:'blue'}).setLngLat([lng,lat]).addTo(map);map.setCenter([lng,lat]);}
+      else userMarker.setLngLat([lng,lat]);
     });
 
-    if (editorMode) {
-      map.on('click', e => { lastClickLngLat=e.lngLat; document.getElementById('editor').style.display='block'; });
-      document.getElementById('save-spot-btn').onclick = () => {
-        const name = document.getElementById('new-spot-name').value.trim();
-        if (!name || !lastClickLngLat) return alert('Enter a name and click the map.');
-        const url = `${WEBHOOK_URL}?name=${encodeURIComponent(name)}`+
-                    `&lat=${lastClickLngLat.lat.toFixed(6)}`+
-                    `&lng=${lastClickLngLat.lng.toFixed(6)}`;
-        fetch(url, { mode: 'no-cors' })
-          .then(() => {
-            alert('✅ Spot saved to sheet!');
-            document.getElementById('editor').style.display='none';
-            document.getElementById('new-spot-name').value='';
-            loadMapData();
-          })
-          .catch(e => {
-            console.error('Save spot error:',e);
-            alert('❌ Error saving spot.');
-          });
+    if(editorMode){
+      map.on('click',e=>{lastClick=e.lngLat;document.getElementById('editor').style.display='block';});
+      document.getElementById('save-spot-btn').onclick=()=>{
+        const name=document.getElementById('new-spot-name').value.trim();
+        if(!name||!lastClick)return alert('Enter name and click map');
+        const url=`${WEBHOOK_URL}?name=${encodeURIComponent(name)}&lat=${lastClick.lat.toFixed(6)}&lng=${lastClick.lng.toFixed(6)}`;
+        fetch(url,{mode:'no-cors'}).then(()=>{
+          alert('Spot saved!');document.getElementById('editor').style.display='none';document.getElementById('new-spot-name').value='';load();
+        }).catch(err=>{console.error(err);alert('Error saving spot');});
       };
     }
 
-    map.on('load', loadMapData);
-    setInterval(loadMapData, REFRESH_INTERVAL_MS);
+    map.on('load',load);
+    setInterval(load,REFRESH_MS);
   })();
   </script>
 </body>
