--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     const COORD_SHEET_ID  = '1XZD33vnS6OnBUos-lXl4qkC8ZJC4UFu3w1c-uvMYC2Y';
     const STATUS_SHEET_ID = '1jvjCSWAVTEkmqD48jpLepyewQR86gttSVUVXC4LLpvQ';
 
-    const COORD_CSV_URL   = `https://docs.google.com/spreadsheets/d/${COORD_SHEET_ID}/export?format=csv&gid=0`;
-    const STATUS_CSV_URL  = `https://docs.google.com/spreadsheets/d/${STATUS_SHEET_ID}/export?format=csv&gid=0`;
+    const COORD_CSV_URL   = `https://docs.google.com/spreadsheets/d/e/2PACX-1vSEG7vxc13zZuw9_Wrp5tgTH9_tSwBMBEwiy4rZFSsi9vL9qs-9pNvYLOm4lx_1Lk9RC6HSuT_5VNE0/pub?output=csv`;
+    const STATUS_CSV_URL  = `https://docs.google.com/spreadsheets/d/e/2PACX-1vQ8gvbP_bQNl3zY89jZNHG3L-5EvDszmpVZTQeUYL3NFPHVyKHAWjhEF1HdiTVHm-IvFQ0T1eXaOcLj/pub?output=csv`;
 
     const WEBHOOK_URL   = 'https://script.google.com/macros/s/AKfycbx1oiHErJFrSR2juag9WCfyB0EyWae5C3vMiBnlwY1yv8hY29J2YCvCPnlXORP-YWAk/exec';
     const EDIT_PASSWORD = 'Jcapable';
